fix overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 body {
   height: 100vh;
   font-family: 'Archivo', sans-serif;
+  overflow: hidden;
 }
 h3 {
   padding: 1%;
